Switches Excetions to RuntimeExceptions